src/core/Claroline/CoreBundle/Tests/Stub/plugin/Valid/WithIcon/ValidWithIcon.php
<?php

namespace Valid\WithIcon;

use Claroline\CoreBundle\Library\PluginBundle;

class ValidWithIcon extends PluginBundle
{
}