src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnexpectedIcon/InvalidUnexpectedIcon.php
<?php

namespace Invalid\UnexpectedIcon;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidUnexpectedIcon extends PluginBundle
{
}